--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design Bootstrap</title>
+    <title>CPE Database System</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'home/plugins/fontawesome/css/all.css' %}">
     <!-- Bootstrap core CSS -->
