--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -36,13 +36,13 @@
                 <!-- <li class="menu-bar">
                     <a href="#" class="navbar-brand" id="sidebar-toggle"><i class="fas fa-bars"></i></a>
                 </li> -->
-                <li class="dashboard active">
+                <li class="py-1 dashboard active">
                     <a href="#"><i class="fas fa-home pr-5"></i>Dashboard</a>
                 </li>
-                <li class="students">
+                <li class="py-1 students">
                     <a href="{% url 'home:sections' %}"><i class="far fa-university pr-5"></i>Students</a>
                 </li>
-                <li class="users">
+                <li class="py-1 users">
                     <a href="#"><i class="fa fa-user"></i>Users</a>
                 </li>
             </ul>
