--- a/home/static/home/css/sections.css
+++ b/home/static/home/css/sections.css
@@ -7,26 +7,6 @@
     border-radius: 2rem;
     padding: 5vh;
 } */
-/* SECTION FONTS */
-.muli-font {
-    font-family: 'Muli', sans-serif;
-}
-
-.cabin-font {
-    font-family: 'Cabin', sans-serif;
-}
-
-.tomorrow-font {
-    font-family: 'Tomorrow', sans-serif;
-}
-
-.open-font {
-    font-family: 'Open Sans', sans-serif;
-}
-
-.monserrat-font {
-    font-family: 'Montserrat', sans-serif;
-}
 
 
 
@@ -66,15 +46,24 @@
 /* SECTION BUTTONS */
 
 .btn-danger {
-    background-color: #E46853 !important;
+    /* background-color: #E46853 !important; */
+    background-color: #f84c71 !important;
 }
 .btn-warning {
-    background-color: #E9AC1A !important;
+    /* background-color: #E9AC1A !important; */
+    background-color: #fab8b2 !important;
 }
 .btn-success.btn-view-table {
-    background-color: #38989D !important;
+    /* background-color: #38989D !important; */
+    background-color: #ac858b !important;
+}
+.btn-warning:not([disabled]):not(.disabled):active {
+    background-color: #f84c71 !important;
 }
 
+.border-20 {
+    border-radius: 20px !important;
+}
 
 /*SECTION HEADINGS */
 h3.title {
@@ -103,13 +92,13 @@ h3.title {
     outline: none;
     /* background: #fef4ea; */
     font-family: 'Muli', sans-serif;
-    color: #e85c62;
+    /* color: #e85c62; */
     border: 2px solid #c7c4c4;
     transition: 0.5s ease-in-out;
 }
 .form-control:focus, select:focus, select:active, select:hover {
     outline: none !important;
-    border-color: #4e2326 !important;
+    border-color: #000 !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
 }
@@ -125,25 +114,29 @@ h3.title {
 .table thead th {
     font-weight: bold;
 }
-.table tbody tr:hover, .table th:hover {
+.table tbody tr:hover {
     background: #fef9f0;
+    transition: 0.4s ease-in-out;
+}
+.table th:hover {
+    background-color: #fcebee;
     transition: 0.4s ease-in-out;
 }
 .table-link {
     font-family: 'Muli', sans-serif;
-    color: #4e2326;
     font-weight: bold;
     transition: 0.3s ease-in-out;
 }
 .table-link:hover {
-    color: #e85c62;
+    color: #fc8d90;
 }
 
 .pagination .page-item.active .page-link {
     background-color: #000;
 }
 .pagination .page-item.active .page-link:hover {
-    background-color: #e65a5f;
+    color: #e65a5f;
+    background-color: #fdcfd6;
 }
 #studentListTable_info {
     font-family: 'Muli', sans-serif;
