--- a/home/templates/home/sections.html
+++ b/home/templates/home/sections.html
@@ -5,6 +5,10 @@
 {% block home_css %}
     <link href="{% static 'home/css/sections.css' %}" rel="stylesheet">
 {% endblock home_css %}
+
+{% block breadcrumbs %}
+    <li class="breadcrumb-item active">Sections</li>
+{% endblock breadcrumbs %}
     
 
 {% block home_content %}
