--- a/home/templates/home/student_view.html
+++ b/home/templates/home/student_view.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="{% static 'home/plugins/select2/css/select2.min.css' %}">
     <link rel="stylesheet" href="{% static 'home/css/sections.css' %}" >
 {% endblock home_css %}
-    
 
+{% block breadcrumbs %}
+    <li class="breadcrumb-item"> <a href="{% url 'home:sections' %}"> Sections</a></li>
+    <li class="breadcrumb-item active">Section {{ section.name }}</li>
+{% endblock breadcrumbs %}
+    
 {% block home_content %}
 
 
