Update and Delete Student

--- a/home/templates/home/sections.html
+++ b/home/templates/home/sections.html
@@ -34,7 +34,7 @@
                                 <img class="card-img-top img-card" src="{% static 'home/images/student2.png' %}" alt="Card image cap">
                                 <!-- Card content -->
                                 <div class="card-body">
-                                    <h4 class="card-title muli-font"><a>Section {{ section.name }}</a></h4>
+                                    <h4 class="card-title muli-font"><a>Section {{ section.name }} {{ section.pk }}</a></h4>
                                     <p class="card-text">
                                         <div class="year muli-font">
                                             A.Y {{ section.academic_year }}
