--- a/home/templates/home/student_individual_view.html
+++ b/home/templates/home/student_individual_view.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="{% static 'home/css/student.css' %}" >
 
 {% endblock home_css %}
+
+
+{% block breadcrumbs %}
+    <li class="breadcrumb-item"><a href="{% url 'home:sections' %}">Sections</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'home:student-list-view' pk=student.section.pk %}">Section {{ student.section.name }}</a></li>
+    <li class="breadcrumb-item active">{{ student.last_name }}</li> 
+{% endblock breadcrumbs %}
     
 
 {% block home_content %}
@@ -23,7 +30,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="container-name text-uppercase muli-font">
-                            <h4>Abarca, Nikki Gener</h4>
+                            <h4>{{ student.last_name }}, {{ student.first_name }} {{ student.middle_name }}</h4>
                         </div>
                     </div><!--col-md-12 end-->
                 </div><!--row end-->
@@ -33,8 +40,9 @@
                             <div class="container-view pt-4 pl-4">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <a href="#" class="btn btn-danger float-right mr-3"><i class="fas fa-trash-alt"> Delete</i></a>
-                                        <a href="#" class="btn btn-warning float-right"><i class="fas fa-pencil-alt"></i> Update</a>
+                                        <span class="btn btn-danger float-right mr-3" data-toggle="modal" data-target="#confirmDelete"><i class="fas fa-trash-alt"></i> Delete</span>
+
+                                        <a href="{% url 'home:update-student' pk=student.pk %}" class="btn btn-warning float-right"><i class="fas fa-pencil-alt"></i> Update</a>
                                     </div>
                                 </div><!--row end-->
                                 <!-- STUB STUDENT NUMBER -->
@@ -46,7 +54,7 @@
                                         <div class="student-section muli-font">
                                             <span class="student-copy" onclick="copyToClipboard('.student-number-text')" data-toggle="tooltip" title="Copy Student Number">
                                                 <span class="student-number-text">
-                                                    2015-02986-MN-0
+                                                    {{ student.student_number }}
                                                 </span>
                                             </span>
                                         </div>
@@ -58,7 +66,7 @@
                                         <div class="student-section font-weight-bold muli-font">SECTION</div>
                                     </div>
                                     <div class="col-sm-12 col-md-8 col-lg-10">
-                                        <div class="student-section muli-font">2</div>
+                                        <div class="student-section muli-font">{{ student.section.name }}</div>
                                     </div>
                                 </div><!--row end-->
                                 <!-- STUB GENDER-->
@@ -67,7 +75,13 @@
                                         <div class="student-section font-weight-bold muli-font">GENDER</div>
                                     </div>
                                     <div class="col-sm-12 col-md-8 col-lg-10">
-                                        <div class="student-section muli-font">FEMALE</div>
+                                        <div class="student-section muli-font">
+                                            {% if student.gender == 0 %}
+                                                MALE
+                                            {% else %}
+                                                FEMALE
+                                            {% endif %}
+                                        </div>
                                     </div>
                                 </div><!--row end-->
                             </div>
@@ -79,6 +93,34 @@
         </div>
     </div><!--row end-->
 </div><!--container fluid end-->
+
+
+<div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="confirmDelete" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="row">
+                    <div class="col-md-12">
+                        <center class="py-5 ">
+                            <i class="fas fa-trash fa-10x animated jello" style="color: #f84c71 !important;"></i>
+                        </center>
+                    </div><!--col-md-12 end-->
+                </div><!--row end-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <center>
+                            <button type="button" class="btn btn-warning border-20 muli-font" data-dismiss="modal">Close</button>
+                            <a href="{% url 'home:delete-student' pk=student.pk %}" class="btn btn-danger border-20 muli-font">Yes, Delete!</a>
+                        </center>
+                    </div><!--col-md-12 end-->
+                </div><!--row end-->
+            </div><!--modal body end-->
+        </div>
+    </div>
+</div>
 
 {% endblock home_content %}
 
