--- a/home/static/home/css/sections.css
+++ b/home/static/home/css/sections.css
@@ -22,6 +22,12 @@
     border-bottom-right-radius: 50px; */
     border-radius: 50px;
     border-top-color: transparent;
+    /* -webkit-box-shadow: 0px 10px 6px 0px rgba(232,92,98,1);
+    -moz-box-shadow: 0px 10px 6px 0px rgba(232,92,98,1);
+    box-shadow: 0px 10px 6px 0px rgba(232,92,98,1); */
+    transition: 0.4s ease-in-out;
+}
+.card:hover {
     -webkit-box-shadow: 0px 10px 6px 0px rgba(232,92,98,1);
     -moz-box-shadow: 0px 10px 6px 0px rgba(232,92,98,1);
     box-shadow: 0px 10px 6px 0px rgba(232,92,98,1);
@@ -143,5 +149,9 @@ h3.title {
     margin-left: 10px;
 }
 
-
-
+/* SECTION View All Students */
+.view-all-container {
+    background-color: #fdcfd6;
+    border-radius: 20px;
+    height: 10vh;
+}
