--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -52,7 +52,19 @@
             </div>
             <div class="col-sm-12">
                 <div class="bottom-container shadow-sm mt-4 pt-4 px-5">
-                    d
+                    <h3 class="muli-font">Recent Actions</h3>
+                    <div class="action-container lighter-pink mt-2">
+                        You added 1 student in Section 2.
+                    </div>
+                    <div class="action-container light-pink mt-2">
+                        You added 1 student in Section 3.
+                    </div>
+                    <div class="action-container lighter-pink mt-2">
+                        You added 1 student in Section FS1N.
+                    </div>
+                    <div class="action-container light-pink mt-2">
+                        You added 1 student in Section 4.
+                    </div>
                 </div>
             </div>
         </div><!--col-md-4 end-->
