--- a/home/templates/home/sections.html
+++ b/home/templates/home/sections.html
@@ -23,6 +23,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="display-5 m-0 pl-3 float-left open-font">Sections</h1>
+                        <a href="{% url 'home:sections-manage' %}" class="update-section" title="Update Sections" data-toggle="tooltip" data-placement="right">
+                            <i class="fas fa-edit fa-2x pt-2 pl-3"></i>
+                        </a>
                         <a href="{% url 'home:create-section' %}" class="btn btn-primary btn-view float-right"><i class="fas fa-plus"></i> Add Section</a>
                     </div>
                 </div>
@@ -80,5 +83,7 @@
         $('ul.sidebar-nav li.user').removeClass('active');
         $('ul.sidebar-nav li.students').addClass('active');
 
+
+        $('[data-toggle="tooltip"]').tooltip()
     </script>
 {% endblock home_js %}
