--- a/home/templates/home/sections.html
+++ b/home/templates/home/sections.html
@@ -49,7 +49,7 @@
                                 <img class="card-img-top img-card" src="{% static 'home/images/student2.png' %}" alt="Card image cap">
                                 <!-- Card content -->
                                 <div class="card-body">
-                                    <h4 class="card-title muli-font"><a>Section {{ section.name }} {{ section.pk }}</a></h4>
+                                    <h4 class="card-title muli-font"><a>Section {{ section.name }}</a></h4>
                                     <p class="card-text">
                                         <div class="year muli-font">
                                             A.Y {{ section.academic_year }}
@@ -84,6 +84,6 @@
         $('ul.sidebar-nav li.students').addClass('active');
 
 
-        $('[data-toggle="tooltip"]').tooltip()
+        $('[data-toggle="tooltip"]').tooltip();
     </script>
 {% endblock home_js %}
