--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -5,6 +5,101 @@
     <link rel="stylesheet" href="{% static 'home/plugins/chartjs/Chart.css' %}">
     <link href="{% static 'home/plugins/fullcalendar/packages/core/main.css' %}" rel="stylesheet" />
     <link href="{% static 'home/plugins/fullcalendar/packages/daygrid/main.css' %}" rel="stylesheet" />
+    <style>
+        .scrollbar-deep-purple::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-deep-purple::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-deep-purple::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #512da8; }
+
+.scrollbar-deep-purple {
+scrollbar-color: #512da8 #F5F5F5;
+}
+
+.scrollbar-cyan::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-cyan::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-cyan::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #00bcd4; }
+
+.scrollbar-cyan {
+scrollbar-color: #00bcd4 #F5F5F5;
+}
+
+.scrollbar-dusty-grass::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-dusty-grass::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-dusty-grass::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-image: -webkit-linear-gradient(330deg, #d4fc79 0%, #96e6a1 100%);
+background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%); }
+
+.scrollbar-ripe-malinka::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-ripe-malinka::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-ripe-malinka::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-image: -webkit-linear-gradient(330deg, #f093fb 0%, #f5576c 100%);
+background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%); }
+
+.bordered-deep-purple::-webkit-scrollbar-track {
+-webkit-box-shadow: none;
+border: 1px solid #512da8; }
+
+.bordered-deep-purple::-webkit-scrollbar-thumb {
+-webkit-box-shadow: none; }
+
+.bordered-cyan::-webkit-scrollbar-track {
+-webkit-box-shadow: none;
+border: 1px solid #00bcd4; }
+
+.bordered-cyan::-webkit-scrollbar-thumb {
+-webkit-box-shadow: none; }
+
+.square::-webkit-scrollbar-track {
+border-radius: 0 !important; }
+
+.square::-webkit-scrollbar-thumb {
+border-radius: 0 !important; }
+
+.thin::-webkit-scrollbar {
+width: 6px; }
+
+.example-1 {
+position: relative;
+overflow-y: scroll;
+height: 200px; }
+    </style>
 {% endblock home_css %}
     
 
@@ -53,17 +148,24 @@
             <div class="col-sm-12">
                 <div class="bottom-container shadow-sm mt-4 pt-4 px-5">
                     <h3 class="muli-font">Recent Actions</h3>
-                    <div class="action-container lighter-pink mt-2">
-                        You added 1 student in Section 2.
-                    </div>
-                    <div class="action-container light-pink mt-2">
-                        You added 1 student in Section 3.
-                    </div>
-                    <div class="action-container lighter-pink mt-2">
-                        You added 1 student in Section FS1N.
-                    </div>
-                    <div class="action-container light-pink mt-2">
-                        You added 1 student in Section 4.
+                    <div class="example-1 scrollbar-ripe-malinka pr-2">
+                        {% for log in logs %}
+                            <div class="action-container lighter-pink mt-2">
+                                {% if 'added' in log.action %}
+                                    <i class="fal fa-user-plus pl-1"></i>
+                                {% elif 'updated' in log.action %}
+                                    <i class="fal fa-pencil-alt pl-1"></i>
+                                {% else %}
+                                    <i class="fal fa-trash-alt pl-1"></i>
+                                {% endif %}
+                                    
+                                {{ log.action }}
+                                <br>
+                                <span class="created-log pl-4">
+                                    {{ log.created_at }}
+                                </span>
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
