--- a/home/templates/home/section_form.html
+++ b/home/templates/home/section_form.html
@@ -36,7 +36,7 @@
                 <!-- inputs -->
                 <div class="row pl-3 text-center">
                     <div class="col-sm-10">
-                        <form class="pt-5" method="POST">
+                        <form class="pt-5" method="POST" novalidate>
                             {% csrf_token %}
                             {% for field in form %}
                             <div class="form-group row">
@@ -45,6 +45,10 @@
                                     <div class="md-form mt-0">
                                         {{ field }}
                                     </div>
+                                    <!-- Error Message -->
+                                    <span class="form-text text-muted bright-pink text-left">
+                                        {{ field.errors }}
+                                    </span>
                                 </div>
                             </div>
                             {% endfor %}
