--- a/home/templates/home/student_form.html
+++ b/home/templates/home/student_form.html
@@ -39,29 +39,48 @@
                     </div>
                 </div>
                 <!-- Error Message -->
-                {% if messages %}
-                <div class="row my-4">
+                
+                <div class="row mt-4">
                     <div class="col-12">
-                        {% for message in messages %}
-                            <span class="muli-font bright-pink">
-                                {{ message}}
-                            </span>
-                        {% endfor %}
+                        {% if messages %}
+                        <div class="alert alert-warning alert-dismissible fade show student-number-error text-white" role="alert">
+                            <h5>
+                                <strong class="font-weight-bold">Holy guacamole!</strong> You should check in on some of those fields below.
+                            </h5>
+                            {% for message in messages %}
+                                <span class="muli-font pl-3">
+                                    {{ message}}
+                                    <br>
+                                </span>
+                            {% endfor %}
+        
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
-                {% endif %}
+                
+
+
                 <!-- inputs -->
                 <div class="row pl-3 text-center">
                     <div class="col-sm-10">
-                        <form class="pt-5" method="POST">
+                        <form class="pt-5" method="POST" novalidate>
                             {% csrf_token %}
                             {% for field in form %}
+
                             <div class="form-group row">
                                 <label for="{{ field.id }}" class="col-sm-2 col-form-label muli-font font-weight-bold">{{ field.label_tag }}</label>
                                 <div class="col-sm-10">
                                     <div class="md-form mt-0">
                                         {{ field }}
                                     </div>
+                                    <!-- Error Message -->
+                                    <span class="form-text text-muted bright-pink text-left">
+                                        {{ field.errors }}
+                                    </span>
                                 </div>
                             </div>
                             {% endfor %}
